--- a/apps/whiteboard/style.css
+++ b/apps/whiteboard/style.css
@@ -1,11 +1,13 @@
-body, html {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+* {
+	margin: 0;
+	padding: 0;
 }
 
-canvas {
-  display: block;
-  background-color: #fff;
-  cursor: crosshair;
+body, html {
+	height: 100%;
+}
+
+#myCanvas {
+	cursor: crosshair;
+    position: fixed;
 }
